--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,40 +1,23 @@
 body {
   margin: 0;
   padding: 0;
-
   font-size: 20px;
   line-height: 1.2;
   font-family: Helvetica, Arial, sans-serif;
   color: #ffffff;
-
   background-color: #312785;
-  background-image:
-    repeating-linear-gradient(
-      150deg,
-      rgba(255, 255, 255, 0.06),
-      rgba(255, 255, 255, 0.06) 1px,
-      transparent 0,
-      transparent 41px),
-    repeating-linear-gradient(
-      -150deg,
-      rgba(255, 255, 255, 0.06),
-      rgba(255, 255, 255, 0.06) 1px,
-      transparent 0,
-      transparent 41px);
-
+  background-image: repeating-linear-gradient( 150deg, rgba(255, 255, 255, 0.06), rgba(255, 255, 255, 0.06) 1px, transparent 0, transparent 41px), repeating-linear-gradient( -150deg, rgba(255, 255, 255, 0.06), rgba(255, 255, 255, 0.06) 1px, transparent 0, transparent 41px);
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
 
 main {
   padding: 20px 20px 120px 20px;
-
   text-align: center;
 }
 
 h1 {
   margin: 0;
-
   font-weight: normal;
   letter-spacing: -1px;
 }
@@ -43,7 +26,7 @@ p {
   margin: 20px 0;
 }
 
-a:link{
+a:link {
   color: #350404;
   text-decoration: underline;
 }
@@ -55,4 +38,11 @@ a:visited {
 
 a:hover {
   text-decoration: none;
+}
+
+.Color_of_the_USSR:visited{
+  color: rgb(165, 4, 4);
+}
+.Color_of_the_USSR:link{
+  color: rgb(165, 4, 4);
 }
