--- a/bootstrap_grid/style_boooot.css
+++ b/bootstrap_grid/style_boooot.css
@@ -1,4 +1,4 @@
-.nav {
+/* .nav {
     background-color: chartreuse;
 }
 
@@ -20,4 +20,7 @@
 img {
     height: auto;
     width: auto;
+} */
+#tested {
+    color: firebrick;
 }
